# learning-rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs  restaraunt.rs  structs.rs
src/ownership/: slices.rs
src/practice/: christmas_carol.rs  collections_exercises.rs  convert.rs  departments.rs  fibonacci.rs  guessing_game.rs  mod.rs  simplified_borrow.rs
src/restaraunt/: back_of_house.rs
src/restaraunt/back_of_house/: food.rs
src/study/: borrows.rs
src/study/collections/: hash_map.rs
src/study/enums/: match.rs
src/study/generics_and_traits/: traits.rs
src/study/generics_traits_lifetimes/: lifetimes.rs
src/study/ownership/: borrowing_and_references.rs  ownership.rs
src/tests/: integration_test.rs
src/theory/: closures.rs  errors_and_results.rs  iterators.rs  loops.rs  tests.rs
src/theory/collections/: strings.rs  vectors.rs
src/theory/enums/: enumeration.rs  if-let.rs
src/theory/generics_traits_lifetimes/: generics.rs
src/theory/ownership/: slices.rs
