[package]
name = "learning_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

# causes program to instantly stop after panic, without cleaning the memory (OS will)
# try to do that
# [profile.release]
# panic = 'abort'